<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:padding="12dp"
    android:background="@color/green">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart = "65dp"
        android:paddingEnd = "65dp"
        android:paddingTop = "50dp"
        android:paddingBottom = "50dp"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" >

        <ImageView
            android:id="@+id/fm_card_image"
            android:layout_width="270dp"
            android:layout_height="270dp"
            android:src="@drawable/up_mindanao_logo"
            android:scaleType="fitCenter"
            android:contentDescription="@string/filler"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/fm_location_info"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/fm_location_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/fm_card_image"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/fm_card_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="36sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="@string/fm_name"
                app:layout_constraintTop_toBottomOf="parent"
                app:layout_constraintBottom_toTopOf="@id/fm_card_position"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/fm_card_position"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="24sp"
                android:textStyle="italic"
                android:textColor="@color/black"
                android:text="@string/fm_position"
                app:layout_constraintTop_toBottomOf="@id/fm_card_name"
                app:layout_constraintBottom_toTopOf="@id/fm_card_location"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/fm_card_location"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp"
                android:textSize="36sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="@string/fm_current_location"
                app:layout_constraintTop_toBottomOf="@id/fm_card_position"
                app:layout_constraintBottom_toTopOf="@id/fm_card_consultation"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/fm_card_consultation"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:text="@string/fm_consultation_time"
                app:layout_constraintTop_toBottomOf="@id/fm_card_location"
                app:layout_constraintBottom_toTopOf="@id/fm_card_email"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/fm_card_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:text="@string/fm_email"
                app:layout_constraintTop_toBottomOf="@id/fm_card_consultation"
                app:layout_constraintBottom_toTopOf="@id/fm_card_last_updated"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/fm_card_last_updated"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:text="@string/fm_last_updated"
                app:layout_constraintTop_toBottomOf="@id/fm_card_email"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>