<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- Background -->
    <View
        android:id="@+id/left_space"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/green"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/guideline" >
    </View>

    <!-- Header section -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="6dp"
        android:background="@color/maroon"
        android:padding="8dp"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/guideline">

        <ImageView
            android:id="@+id/headerLogo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="24dp"
            android:contentDescription="@string/upmin_logo"
            android:scaleType="fitCenter"
            android:src="@drawable/up_mindanao_logo"
            app:layout_constraintWidth="120dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/headerName" />

        <TextView
            android:id="@+id/headerName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:text="@string/header_text"
            android:textSize="32sp"
            android:textColor="@color/white"
            android:fontFamily="@font/optima"
            android:lines="2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/headerLogo" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- RecyclerView for the grid of CardViews -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:background="@color/green"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline" />

    <!-- Guideline to divide the screen into halves -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.8" />

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/guideline" />

    <!-- Right half background color -->
    <View
        android:id="@+id/right_space"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/maroon"
        app:layout_constraintStart_toEndOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Right half of the screen containing 3 card views -->
    <androidx.cardview.widget.CardView
        android:id="@+id/quickLinks"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="6dp"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="3dp"
        android:clickable="true"
        app:cardCornerRadius="12dp"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toTopOf="@+id/citizensCharter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/card_quickLinks"
            android:fontFamily="@font/optima_bold"
            android:textSize="32sp"
            android:textAlignment="center"
            android:textColor="@color/maroon"
            app:drawableTint="@color/maroon"
            app:drawableTopCompat="@drawable/ic_quick_link_max" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/citizensCharter"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="6dp"
        android:layout_marginVertical="4dp"
        android:clickable="true"
        app:cardCornerRadius="12dp"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toTopOf="@+id/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/quickLinks">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/card_citizensCharter"
            android:textColor="@color/maroon"
            android:fontFamily="@font/optima_bold"
            android:textSize="32sp"
            app:drawableTint="@color/maroon"
            app:drawableTopCompat="@drawable/ic_citizens_charter_max" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/login"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="6dp"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="6dp"
        android:clickable="true"
        app:cardCornerRadius="12dp"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/citizensCharter"
        app:layout_constraintHeight_percent="0.15">

        <TextView
            android:id="@+id/loginTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/optima_bold"
            android:textSize="36sp"
            android:gravity="center"
            android:text="@string/card_login"
            android:textColor="@color/maroon"
            app:drawableTint="@color/maroon"
            app:drawableLeftCompat="@drawable/ic_login" />
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>